# leaflens

./: .env.example  .gitignore  CONTRIBUTING.md  PRIVACY.md  README.md  docker-compose.yml  nginx.conf
app/: pubspec.yaml
app/lib/: main.dart
app/lib/core/config/: app_config.dart
app/lib/core/router/: app_router.dart
app/lib/core/services/: init_services.dart  ml_service.dart  permission_service.dart  storage_service.dart
app/lib/core/theme/: app_theme.dart
app/lib/features/diagnosis/domain/entities/: diagnosis_result.dart
app/lib/features/diagnosis/presentation/pages/: camera_page.dart  result_page.dart
app/lib/features/history/domain/entities/: diagnosis_history.dart
app/lib/features/history/presentation/pages/: history_page.dart
app/lib/features/home/presentation/pages/: home_page.dart
app/lib/features/home/presentation/widgets/: quick_action_card.dart  recent_diagnosis_card.dart  stats_card.dart
plugins/: plugins.toml
plugins/tomato-pro/: labels.yaml
plugins/tomato-pro/playbooks/: bacterial_spot.md
plugins/tomato-pro/rules/: expert_rules.toml
research/: dataset.py  model.py  requirements.txt  train_classifier.py  utils.py
research/configs/: default.yaml
server/: Cargo.toml  Dockerfile  openapi.yaml
server/migrations/: 001_initial_schema.sql  002_seed_data.sql
server/src/: config.rs  database.rs  main.rs  models.rs  utils.rs
server/src/handlers/: diagnosis.rs  health.rs  mod.rs  outbreaks.rs  playbooks.rs  plugins.rs  symptoms.rs
server/src/services/: ml_service.rs  mod.rs  symptom_service.rs
tools/: fetch_models.sh
(+3 files in other folders)
